# text-zipper-benchmarks

./: install.sh  text-zipper-benchmarks.cabal
programs/benchmarks/: Main.hs
